2013-04-29  Eli Zaretskii  <eliz@gnu.org>

	* w32/include/dlfcn.h: New file.

	* w32/compat/posixfcn.c: Include dlfcn.h.
	(dlopen, dlerror, dlsym) [MAKE_LOAD]: New functions, in support of
	dynamic loading.

	* config.h.W32.template (MAKE_LOAD): Define.

	* load.c (load_object) [HAVE_DOS_PATHS]: Support backslashes and
	drive letters in file names of dynamic objects.

	* job.c (construct_command_argv_internal) [WINDOWS32]: Return
	right after generating new_argv for one_shell case.  This fixes
	the Windows build for both Unixy shell and stock Windows shells.

2013-04-28  Eli Zaretskii  <eliz@gnu.org>

	* dir.c (local_stat) [WINDOWS32]: Use the wrapper on MS-Windows.
	If the argument ends in "dir/.", make sure the parent dir exists
	and is indeed a directory.  Fixes Savannah bug #37065.

2013-04-28  Paul Smith  <psmith@gnu.org>

	* makeint.h (message_s, error_s): Functions that print to strings
	rather than directly to files.
	* misc.c (message_s, error_s): Create them.
	* job.c (child_error): Print error messages to the output sync
	logs, if one exists, rather then directly to the terminal.
	(reap_children): Move the per-line sync after child_error().

	* configure.ac: Remove support for pre-ANSI variadic function calls.
	* makeint.h: Ditto.
	* misc.c: Ditto.
	* config.ami.template: Ditto.
	* config.h-vms.template: Ditto.
	* config.h.W32.template: Ditto.
	* configh.dos.template: Ditto.

	Implement a "per-job" output synchronization option.

	* main.c (decode_output_sync_flags): Recognize the new option.
	* makeint.h (OUTPUT_SYNC_JOB): Add new values for "job"
	* job.c (assign_child_tempfiles): In per-job mode, truncate the
	temp file for re-use by the next job.
	(sync_output): Don't close the temp files as we may still use them.
	(free_child): Close the temp files here as we definitely don't
	need them.
	(new_job): In per-job output mode, sync_output() after each job.
	* job.h (struct child): Avoid ifdefs.
	* make.1: Add new options to the man page.