@@ -1,3 +1,8 @@
+2013-05-01  Paul Smith  <psmith@gnu.org>
+
+	* job.c (start_job_command): Don't redirect output for recursive
+	make jobs, unless we're in makefile synchronization mode.
+
 2013-04-29  Eli Zaretskii  <eliz@gnu.org>
 
 	* w32/include/dlfcn.h: New file.
